--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# Java 관련 파일 무시
 HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+src/main/resources/application.yml
+**/SwaggerConfig.class
+**/SwaggerConfig.java
 
 ### STS ###
 .apt_generated
@@ -35,3 +39,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+### txt file ###
+*.txt
