--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,18 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.kafka:spring-kafka' // Kafka
-
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 
     // Swagger OpenAPI dependency
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+}
+
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 tasks.named('test') {
